--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "ConfigArgParse" %}
-{% set version = "0.10.0" %}
-{% set md5 = "408ad7af06cd449420cecc19bee6f0c9" %}
+{% set version = "0.12.0" %}
+{% set sha256 = "28cd7d67669651f2a4518367838c49539457504584a139709b2b8f6c208ef339" %}
 
 package:
   name: {{ name|lower }}
@@ -9,7 +9,7 @@ package:
 source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  md5: {{ md5 }}
+  sha256: {{ sha256 }}
 
 build:
   number: 0
