--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,10 +17,9 @@ build:
   script: python -m pip install --no-deps --ignore-installed .
 
 requirements:
-  build:
+  host:
     - python
-    - setuptools
-
+    - pip
   run:
     - python
 
