--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "0.14.0" %}
+{% set version = "1.0" %}
 
 package:
   name: configargparse
@@ -6,7 +6,7 @@ package:
 
 source:
   url: https://pypi.io/packages/source/C/ConfigArgParse/ConfigArgParse-{{ version }}.tar.gz
-  sha256: 2e2efe2be3f90577aca9415e32cb629aa2ecd92078adbe27b53a03e53ff12e91
+  sha256: bf378245bc9cdc403a527e5b7406b991680c2a530e7e81af747880b54eb57133
 
 build:
   number: 0
@@ -21,13 +21,20 @@ requirements:
     - python
 
 test:
+  source_files:
+    - tests
+    - setup.py
+  requires:
+    - pyyaml
   imports:
     - configargparse
+  commands:
+    - python setup.py test
 
 about:
   home: https://github.com/zorro3/ConfigArgParse
   license: MIT
-  summary: replacement for argparse allowing options to be set via config files and/or env vars
+  summary: A drop-in replacement for argparse that allows options to also be set via config files and/or environment variables.
   license_family: MIT
   license_file: LICENSE
   dev_url: https://github.com/zorro3/ConfigArgParse
@@ -36,3 +43,4 @@ about:
 extra:
   recipe-maintainers:
     - msarahan
+    - bollwyvl
