--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -34,13 +34,13 @@ test:
     - python -m pip check
 
 about:
-  home: https://github.com/zorro3/ConfigArgParse
+  home: https://github.com/bw2/ConfigArgParse
   license: MIT
   summary: A drop-in replacement for argparse that allows options to also be set via config files and/or environment variables.
   license_family: MIT
   license_file: LICENSE
-  dev_url: https://github.com/zorro3/ConfigArgParse
-  doc_url: https://github.com/zorro3/ConfigArgParse
+  dev_url: https://github.com/bw2/ConfigArgParse
+  doc_url: https://github.com/bw2/ConfigArgParse
 
 extra:
   recipe-maintainers:
